--- a/configs/gfm_config.yaml
+++ b/configs/gfm_config.yaml
@@ -10,14 +10,14 @@ MODEL:
     IN_CHANS: 3
 DATA:
   IMG_SIZE: 192
-TRAIN:
-  EPOCHS: 100
-  WARMUP_EPOCHS: 20
-  BASE_LR: 1.0e-4
-  WARMUP_LR: 1.0e-7
-  MIN_LR: 1.0e-5
-  WEIGHT_DECAY: 0.05
-  LAYER_DECAY: 0.9
+# TRAIN:
+#   EPOCHS: 100
+#   WARMUP_EPOCHS: 20
+#   BASE_LR: 1.0e-4
+#   WARMUP_LR: 1.0e-7
+#   MIN_LR: 1.0e-5
+#   WEIGHT_DECAY: 0.05
+#   LAYER_DECAY: 0.9
 PRINT_FREQ: 100
 SAVE_FREQ: 5
 TAG: simmim_finetune__swin_base__img128_window4__100ep
